WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141248
[WinCairo] Crash when media player is destroyed.
https://bugs.webkit.org/show_bug.cgi?id=141248
Summary
[WinCairo] Crash when media player is destroyed.
peavo
Reported
2015-02-04 07:40:55 PST
A COM smart pointer is both released, and set to null. This means that the COM Release method is called twice, causing a crash.
Attachments
Patch
(1.34 KB, patch)
2015-02-04 07:44 PST
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2015-02-04 07:44:44 PST
Created
attachment 246032
[details]
Patch
Darin Adler
Comment 2
2015-02-04 09:19:37 PST
Comment on
attachment 246032
[details]
Patch I remember we found some trick to make it impossible to call deref() on a RefPtr, but I don’t remember what it was or if we did it.
peavo
Comment 3
2015-02-04 09:54:25 PST
(In reply to
comment #2
)
> Comment on
attachment 246032
[details]
> Patch > > I remember we found some trick to make it impossible to call deref() on a > RefPtr, but I don’t remember what it was or if we did it.
I see, would be nice to have that in the COMPtr class aswell. Thanks for reviewing :)
peavo
Comment 4
2015-02-23 06:31:39 PST
cq+ ? ;)
WebKit Commit Bot
Comment 5
2015-02-23 07:22:16 PST
Comment on
attachment 246032
[details]
Patch Clearing flags on attachment: 246032 Committed
r180501
: <
http://trac.webkit.org/changeset/180501
>
WebKit Commit Bot
Comment 6
2015-02-23 07:22:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug