[WinCairo] Crash when media player is destroyed. https://bugs.webkit.org/show_bug.cgi?id=141248

Patch by peavo@outlook.com <peavo@outlook.com> on 2015-02-23
Reviewed by Darin Adler.

A COM smart pointer is both released, and set to null.
This means that the COM Release method is called twice, causing a crash.

* platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:
(WebCore::MediaPlayerPrivateMediaFoundation::endSession):

Canonical link: https://commits.webkit.org/159924@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180501 268f45cc-cd09-0410-ab3c-d52691b4dbfc